# lymadOS

./: Cargo.toml  JOURNAL.md  PROJECT.md  build.rs
kernel/: Cargo.toml
kernel/src/: events.rs  gdt.rs  graphics.rs  interrupts.rs  lib.rs  main.rs
kernel/src/drivers/: acpi.rs  apic.rs  exit.rs  keyboard.rs  mod.rs  mouse.rs  pit.rs  serial.rs
kernel/src/mm/: allocator.rs  buddy.rs  memory.rs  mod.rs  slub.rs  slub_allocator.rs  user.rs
kernel/src/resources/: hello.elf  hello_world.elf
kernel/src/tasks/: elf.rs  mod.rs  scheduler.rs  switch.rs  syscall.rs  task.rs
src/: allocator_tests.rs  main.rs
userspace/: build.ps1  linker.ld
userspace/asm_helloworld/: build.ps1  hello.asm
userspace/rs_helloworld/: Cargo.toml  build.ps1
userspace/rs_helloworld/src/: main.rs
