[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
acpi = "6.0.1"
bootloader_api = "0.11.13"
crossbeam-queue = { version = "0.3.12", default-features = false, features = ["alloc"] }
pc-keyboard = "0.8.0"
ps2-mouse = "0.1.4"
spin = "0.10.0"
uart_16550 = "0.4.0"
x86_64 = "0.15.4"

[features]
no_global_allocator = []
